<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.cril.cli</groupId>
	<artifactId>fr.cril.cli</artifactId>
	<version>0.1-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>Jigsaw CLI library</name>
	<description>An annotation-based CLI interface for Jigsaw projects</description>

	<organization>
		<name>Artois University and CNRS</name>
		<url>http://www.cril.univ-artois.fr/</url>
	</organization>

	<inceptionYear>2019</inceptionYear>

	<developers>
		<developer>
			<id>lonca</id>
			<name>Emmanuel Lonca</name>
			<email>lonca@cril.fr</email>
			<url>http://www.cril.univ-artois.fr/~lonca/</url>
			<organization>Univ. Artois, CRIL-CNRS</organization>
			<organizationUrl>http://www.cril.univ-artois.fr</organizationUrl>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>11</java.version>
		<junit.jupiter.version>5.4.2</junit.jupiter.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>nl.jqno.equalsverifier</groupId>
			<artifactId>equalsverifier</artifactId>
			<version>3.1.9</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>${java.version}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>
						${argLine}
						--add-opens
						fr.cril.cli/fr.cril.cli.utils=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.2</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<source>${java.version}</source>
					<sourceFileIncludes>
						<sourceFileInclude>**/*.java</sourceFileInclude>
					</sourceFileIncludes>
					<failOnWarnings>true</failOnWarnings>
					<additionalOptions>-html5</additionalOptions>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>1.20</version>
				<configuration>
					<licenseName>jigsaw-cli</licenseName>
					<licenseResolver>${project.baseUri}/license</licenseResolver>
					<projectName>Jigsaw-cli</projectName>
				</configuration>
				<executions>
					<execution>
						<id>first</id>
						<goals>
							<goal>update-file-header</goal>
						</goals>
						<phase>process-sources</phase>
						<configuration>
							<roots>
								<root>src/main/java</root>
								<root>src/test</root>
							</roots>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
